# AI-Personal-Financial-Strategy-Engine

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
agents/: mcp_client.py  orchestrator.py  prompts.py  requirements.txt
agents/tests/: test_orchestrator.py
backend/: requirements.txt
backend/app/: config.py  database.py  dependencies.py  main.py  middleware.py
backend/tests/: conftest.py  test_auth.py  test_routers.py
docker/: backend.Dockerfile  frontend.Dockerfile  mcp_servers.Dockerfile  nginx.conf
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
infra/monitoring/: grafana-dashboard.json  prometheus.yml
infra/terraform/: main.tf  network.tf  outputs.tf  services.tf  variables.tf
mcp_servers/: requirements.txt
mcp_servers/insurance_mcp/: __init__.py  server.py
mcp_servers/knowledge_mcp/: __init__.py  server.py
mcp_servers/loan_mcp/: __init__.py  server.py
mcp_servers/market_mcp/: __init__.py  server.py
mcp_servers/portfolio_mcp/: __init__.py  server.py
mcp_servers/risk_mcp/: __init__.py  server.py
mcp_servers/tests/: __init__.py  test_loan_mcp.py  test_portfolio_mcp.py  test_risk_mcp.py
ml/: generate_data.py  requirements.txt  train.py
ml/tests/: test_model.py
quant/: comparator.py  insurance_engine.py  loan_engine.py  portfolio_engine.py  requirements.txt  simulation_engine.py
quant/tests/: __init__.py  test_comparator.py  test_insurance_engine.py  test_loan_engine.py  (+2 more)
rag/: ingest.py  pipeline.py  requirements.txt  user_rag.py
(+35 files in other folders)
